@@ -660,13 +660,15 @@ abstract class CGraphGeneral extends CZBXAPI {
 				// if the current graph is templated and new items to be added
 				if (HOST_STATUS_TEMPLATE == $host['status']) {
 					$templatedGraph = $host['hostid'];
+					$itemIds = array();
+
 					foreach ($graph['gitems'] as $gitem) {
 						if (!isset($gitem['gitemid']) && isset($gitem['itemid'])) {
 							$itemIds[] = $gitem['itemid'];
 						}
 					}
 
-					if (isset($itemIds) && $itemIds) {
+					if ($itemIds) {
 						$itemHosts = API::Host()->get(array(
 							'itemids' => $itemIds,
 							'output' => array('hostid'),
