@@ -94,8 +94,16 @@ class DB {
 
 		if (is_null(self::$nodeId)) {
 			self::$nodeId = get_current_nodeid(false);
-			self::$minNodeId = bcadd(bcmul(self::$nodeId, '100000000000000'), bcmul($ZBX_LOCALNODEID, '100000000000'), 0);
-			self::$maxNodeId = bcadd(self::$minNodeId, '99999999999', 0);
+			if (self::$nodeId == 0) {
+				self::$minNodeId = 0;
+				self::$maxNodeId = ZBX_STANDALONE_MAX_IDS;
+			}
+			else {
+				self::$minNodeId = bcadd(
+					bcmul(self::$nodeId, ZBX_DM_MAX_HISTORY_IDS), bcmul($ZBX_LOCALNODEID, ZBX_DM_MAX_CONFIG_IDS), 0
+				);
+				self::$maxNodeId = bcadd(self::$minNodeId, bcsub(ZBX_DM_MAX_CONFIG_IDS, 1), 0);
+			}
 		}
 	}
 
@@ -185,8 +193,7 @@ class DB {
 
 		$sql = 'SELECT MAX('.$id_name.') AS id'.
 				' FROM '.$table.
-				' WHERE '.$id_name.'>='.self::$minNodeId.
-				' AND '.$id_name.'<='.self::$maxNodeId;
+				' WHERE '.$id_name.' BETWEEN '.self::$minNodeId.' AND '.self::$maxNodeId;
 		$row = DBfetch(DBselect($sql));
 
 		$nextid = ($row && $row['id']) ? $row['id'] : self::$minNodeId;
