@@ -95,6 +95,10 @@ define('ZBX_DB_ORACLE',		'ORACLE');
 define('ZBX_DB_POSTGRESQL',	'POSTGRESQL');
 define('ZBX_DB_SQLITE3',	'SQLITE3');
 
+define('ZBX_STANDALONE_MAX_IDS', '9223372036854775807');
+define('ZBX_DM_MAX_HISTORY_IDS', '100000000000000');
+define('ZBX_DM_MAX_CONFIG_IDS', '100000000000');
+
 define('PAGE_TYPE_HTML',				0);
 define('PAGE_TYPE_IMAGE',				1);
 define('PAGE_TYPE_XML',					2);
