@@ -36,7 +36,6 @@ require_once dirname(__FILE__).'/function_DBrollback.php';
 require_once dirname(__FILE__).'/function_DBselect.php';
 require_once dirname(__FILE__).'/function_DBstart.php';
 require_once dirname(__FILE__).'/CTimePeriodValidatorTest.php';
-require_once dirname(__FILE__).'/zbx_limitTest.php';
 require_once dirname(__FILE__).'/zbx_dbcast_2bigintTest.php';
 require_once dirname(__FILE__).'/dbConditionIntTest.php';
 require_once dirname(__FILE__).'/dbConditionStringTest.php';
@@ -65,7 +64,6 @@ class GeneralTests {
 		$suite->addTestSuite('function_DBselect');
 		$suite->addTestSuite('function_DBstart');
 		$suite->addTestSuite('CTimePeriodValidatorTest');
-		$suite->addTestSuite('zbx_limitTest');
 		$suite->addTestSuite('zbx_dbcast_2bigintTest');
 		$suite->addTestSuite('dbConditionIntTest');
 		$suite->addTestSuite('dbConditionStringTest');
