@@ -4764,6 +4764,7 @@ void	DCrequeue_items(zbx_uint64_t *itemids, unsigned char *states, int *lastcloc
 			case SUCCEED:
 			case NOTSUPPORTED:
 			case AGENT_ERROR:
+			case CONFIG_ERROR:
 				DCrequeue_reachable_item(dc_item, lastclocks[i]);
 				break;
 			case NETWORK_ERROR:
